feat: msa mvc study